Update chromium flags, add fuzzel, add some window rules

--- a/Configs/hypr/.config/hypr/hyprlock.conf
+++ b/Configs/hypr/.config/hypr/hyprlock.conf
@@ -1,80 +1,154 @@
-# Tokyo Night themed hyprlock configuration
-
-# Background configuration
-background {
-    monitor =
-    path = screenshot # Use a screenshot as the base background
-    color = rgba(26, 27, 38, 1.0) # Tokyo Night background color
-
-    # Blur effect
-    blur_size = 7
-    blur_passes = 3
-    noise = 0.0117
-    contrast = 0.8916
-    brightness = 0.8172
-    vibrancy = 0.1696
-    vibrancy_darkness = 0.0
-}
-
 # General configuration
 general {
-    disable_loading_bar = false
     hide_cursor = true
     grace = 0
-    no_fade_in = false
+    ignore_empty_input = false
+    immediate_render = true
+    text_trim = true
 }
 
-# Input field configuration
-input-field {
+# Animation settings
+animations {
+    enabled = true
+}
+
+# Create smooth animations
+bezier = smooth, 0.25, 0.8, 0.5, 1.0
+bezier = smoothOut, 0.36, 0, 0.66, -0.56
+bezier = overshot, 0.05, 0.9, 0.1, 1.1
+
+# Define animations
+animation = fadeIn, 1, 1.5, smooth
+animation = fadeOut, 1, 1.5, smoothOut
+animation = inputFieldColors, 1, 1.5, smooth
+animation = inputFieldFade, 1, 1.5, smooth
+animation = inputFieldWidth, 1, 0.5, overshot
+
+# Background
+background {
     monitor =
-    size = 200, 50
-    outline_thickness = 2
-    dots_size = 0.2 # Scale of input-field height
-    dots_spacing = 0.2 # Scale of dots' size
-    dots_center = true
-    outer_color = rgb(49, 51, 75) # Tokyo Night selection color
-    inner_color = rgb(26, 27, 38) # Tokyo Night background color
-    font_color = rgb(192, 202, 245) # Tokyo Night foreground color
-    fade_on_empty = true
-    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
-    hide_input = false
-    position = 0, -120
+    path = screenshot
+    color = rgba(20, 20, 25, 0.9)
+    blur_passes = 3
+    blur_size = 7
+    noise = 0.02
+    contrast = 0.9
+    brightness = 0.8
+    vibrancy = 0.2
+    vibrancy_darkness = 0.1
+}
+
+# Lock screen layout elements
+# Profile picture
+image {
+    monitor =
+    path = $HOME/.face
+    size = 120
+    rounding = -1
+    border_size = 4
+    border_color = rgba(59, 130, 246, 0.8)
+
+    position = 0, -140
     halign = center
     valign = center
 }
 
-# Clock configuration
-clock {
-    monitor =
-    time {
-        format = %H:%M
-        font_size = 96
-        font_family = JetBrains Mono Nerd Font
-        color = rgb(192, 202, 245) # Tokyo Night foreground color
-        position = 0, -300
-        halign = center
-        valign = center
-    }
-
-    date {
-        format = %A, %d %B
-        font_size = 24
-        font_family = JetBrains Mono Nerd Font
-        color = rgb(169, 177, 214) # Tokyo Night comment color
-        position = 0, -200
-        halign = center
-        valign = center
-    }
-}
-
-# Labels for additional information
+# Username display
 label {
     monitor =
-    text = Type to unlock...
-    color = rgb(129, 141, 193) # Tokyo Night blue
-    font_size = 18
-    font_family = JetBrains Mono Nerd Font
+    text = $USER
+    color = rgba(240, 240, 240, 1.0)
+    font_size = 24
+    font_family = Noto Sans
+
     position = 0, -50
+    halign = center
+    valign = center
+}
+
+# Time display
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span font_weight='bold' font_size='large'>$TIME</span>"
+    color = rgba(240, 240, 240, 1.0)
+    font_size = 32
+    font_family = Noto Sans
+
+    position = 0, -220
+    halign = center
+    valign = center
+}
+
+# Date display
+label {
+    monitor =
+    text = cmd[update:1000] date "+%A, %B %d"
+    color = rgba(240, 240, 240, 0.8)
+    font_size = 16
+    font_family = Noto Sans
+
+    position = 0, -190
+    halign = center
+    valign = center
+}
+
+# Shape for input box background
+shape {
+    monitor =
+    size = 360, 60
+    color = rgba(30, 30, 46, 0.6)
+    rounding = 15
+    shadow_passes = 2
+    shadow_size = 5
+    shadow_color = rgba(0, 0, 0, 0.4)
+    shadow_boost = 1.0
+
+    position = 0, 0
+    halign = center
+    valign = center
+}
+
+# Password input field
+input-field {
+    monitor =
+    size = 300, 50
+    outline_thickness = 2
+    dots_size = 0.3
+    dots_spacing = 0.2
+    dots_center = true
+    dots_rounding = -1
+    outer_color = rgba(59, 130, 246, 0.8) rgba(104, 136, 238, 0.7) 45deg
+    inner_color = rgba(0, 0, 0, 0.0)
+    font_color = rgb(220, 220, 220)
+    font_family = Noto Sans
+    fade_on_empty = true
+    fade_timeout = 1000
+    placeholder_text = <i>Password...</i>
+    hide_input = false
+    rounding = 12
+    check_color = rgba(59, 177, 116, 0.8) rgba(59, 177, 116, 0.4) 45deg
+    fail_color = rgba(235, 68, 68, 0.8) rgba(235, 68, 68, 0.4) 45deg
+    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+    fail_timeout = 2000
+    capslock_color = rgba(249, 184, 63, 0.8)
+    shadow_passes = 2
+    shadow_size = 2
+    shadow_boost = 1.0
+
+    position = 0, 0
+    halign = center
+    valign = center
+}
+
+# Failed attempts display (shows up on wrong password)
+label {
+    monitor =
+    text = $ATTEMPTS[<span font_size='small' foreground='#eb4444'>Failed attempts: $ATTEMPTS</span>]
+    color = rgba(240, 240, 240, 0.8)
+    font_size = 14
+    font_family = Noto Sans
+
+    position = 0, 60
     halign = center
     valign = center
 }
