--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -16,9 +16,9 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=HDMI-A-1,1920x1080@60,-1920x360,1
-monitor=DP-1,2560x1440@170,0x0,1
-monitor=HDMI-A-2,1920x1080@60,2560x360,1
+monitor = HDMI-A-1, 1920x1080@60, -1920x360, 1
+monitor = DP-1, 2560x1440@170, 0x0, 1, bitdepth, 10
+monitor = HDMI-A-2, 1920x1080@60, 2560x360, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -26,13 +26,11 @@ monitor=HDMI-A-2,1920x1080@60,2560x360,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
-# Set programs that you use
+# Set programs
 $terminal = ghostty
 $fileManager = thunar
-#$menu = rofi -show drun # old wofi --show drun
-$menu = walker --modules applications,ssh
-#$menu = rofi -show drun
-$browser = thorium-browser
+$menu = fuzzel
+$browser = chromium
 
 #################
 ### AUTOSTART ###
@@ -41,9 +39,10 @@ $browser = thorium-browser
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = hyprpaper
+#exec-once = hyprpaper
+exec-once = swww-daemon
 
-exec-once = walker --gapplication-service
+# exec-once = walker --gapplication-service
 
 exec-once = systemctl --user start hyprpolkitagent
 
@@ -51,6 +50,7 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'BreezeX-Rose
 exec-once = hyprctl setcursor BreezeX-RosePine-Linux 24
 exec-once = xsettingsd &
 exec-once = eww open bar
+exec-once = filen-cli mount ~/Filen
 
 
 #############################
@@ -61,14 +61,14 @@ exec-once = eww open bar
 
 #Nvidia Stuff
 env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 env = ELECTRON_ENABLE_LOGGING,true
-#env = ELECTRON_DISABLE_GPU,true
 
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -114,7 +114,6 @@ render {
 
 opengl {
     nvidia_anti_flicker = 0
-    force_introspection = 2
 }
 
 misc {
@@ -128,24 +127,41 @@ decoration {
     # rounding = 10
     rounding = 0
 
-    active_opacity = 0.7
-    inactive_opacity = 0.7
+    active_opacity = 0.75
+    inactive_opacity = 0.75
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
+    #blur {
+    #    enabled = true
+    #    xray = true
+    #    special = true
+    #    new_optimizations = true
+    #    size = 7
+    #    passes = 5
+    #    brightness = 2
+    #    vibrancy_darkness = 0.7
+    #    noise = 0.01
+    #    contrast = 2
+    #    popups = true
+    #    popups_ignorealpha = 0.6
+    #    ignore_opacity = true
+    #}
     blur {
         enabled = true
-        xray = true
-        special = true
+        size = 6
+        passes = 4
+        noise = 0.03
+        contrast = 1.0
+        brightness = 0.7
+        vibrancy = 0.25
+        vibrancy_darkness = 0.9
         new_optimizations = true
-        size = 7
-        passes = 5
-        brightness = 2
-        vibrancy_darkness = 0.7
-        noise = 0.01
-        contrast = 2
+        xray = true
+        special = false
         popups = true
-        popups_ignorealpha = 0.6
-        ignore_opacity = true
+        popups_ignorealpha = 0.18
+        input_methods = true
+        input_methods_ignorealpha = 0.18
     }
 }
 
@@ -356,36 +372,41 @@ binds {
 
 rules {
 
-    windowrulev2 = float,title:^(Open)$
-    windowrulev2 = float,title:^(Choose Files)$
-    windowrulev2 = float,title:^(Save As)$
-    windowrulev2 = float,title:^(Save File)$
-    windowrulev2 = float,title:^(Select Folder to Scan — Filelight)$
+    windowrule = float, title:^(Open)$
+    windowrule = float, title:^(Choose Files)$
+    windowrule = float, title:^(Save As)$
+    windowrule = float, title:^(Save File)$
+    windowrule = size 350 350, title:^(Save File)$
+    windowrule = float, title:^(Select Folder to Scan — Filelight)$
 
-    windowrulev2 = noinitialfocus,class:jetbrains-idea,title:^win(.*)
+    windowrule = float, title:^(Bitwarden)$
 
-    windowrulev2 = float, title:^(OpenRGB)$
-    windowrulev2 = float, title:^(Qt6 Configuration Tool)$
-    windowrulev2 = float, title:^(Kvantum Manager)$
-    windowrulev2 = float, title:^(nwg-look)$
-    windowrulev2 = float, title:^(BleachBit)$
+    windowrule = noinitialfocus, class:jetbrains-idea, title:^win(.*)
 
-    windowrulev2 = float, title:^(.*Hyprshot.*)$
+    windowrule = float, title:^(OpenRGB)$
+    windowrule = float, title:^(Qt6 Configuration Tool)$
+    windowrule = float, title:^(Kvantum Manager)$
+    windowrule = float, title:^(nwg-look)$
+    windowrule = float, title:^(BleachBit)$
 
-    windowrulev2 = float, title:^(ghostty)$
-    windowrulev2 = size 600 350, title:^(ghostty)$
-    windowrulev2 = move center, title:^(ghostty)$
-    windowrulev2 = animation popin, title:^(ghostty)$
+    windowrule = float, title:^(.*Hyprshot.*)$
+
+    windowrule = float, title:^(ghostty)$
+    windowrule = size 600 350, title:^(ghostty)$
+    windowrule = move center, title:^(ghostty)$
+    windowrule = animation popin, title:^(ghostty)$
 
     # Ensure EWW is blurred properly
-    windowrulev2 = opacity 0.8 0.8,class:^(eww-bar)$
-    windowrulev2 = xray 1,class:^(eww-bar)$  # Enable xray mode for the window
+    windowrule = opacity 0.8 0.8,class:^(eww-bar)$
+    windowrule = xray 1, class:^(eww-bar)$  # Enable xray mode for the window
 
-    windowrulev2 = opacity 0.8 0.8,class:^(walker)$
-    windowrulev2 = xray 1,class:^(walker)$  # Enable xray mode for the window
+    #windowrule = opacity 0.8 0.8,class:^(fuzzel)$
+    #windowrule = xray 1, class:^(fuzzel)$  # Enable xray mode for the window
 
-    # Apply layer rules if you're using EWW as an overlay
-    layerrule = blur, eww-bar
-    layerrule = ignorezero, eww-bar  # Ignore fully transparent pixels
-    layerrule = ignorezero,walker
+    layerrule = blur, launcher
+    #layerrule = ignorezero, launcher
+    layerrule = blur, gtk-layer-shell
+    # Apply layer rules using EWW as an overlay
+    layerrule = blurpopups, gtk-layer-shell
+    layerrule = ignorezero, gtk-layer-shell
 }
