--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -27,7 +27,7 @@ monitor = HDMI-A-2, 1920x1080@60, 2560x360, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs
-$terminal = ghostty
+$terminal = ghostty --gtk-single-instance=true
 $fileManager = thunar
 $menu = fuzzel
 $browser = chromium
@@ -50,7 +50,7 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'BreezeX-Rose
 exec-once = hyprctl setcursor BreezeX-RosePine-Linux 24
 exec-once = xsettingsd &
 exec-once = eww open bar
-
+exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=false --initial-window=false
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -87,14 +87,14 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 5
+    gaps_in = 4
     gaps_out = 20
 
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(222436ff)
-    col.inactive_border = rgba(1e2030ff)
+    col.active_border = rgba(222436a3)
+    col.inactive_border = rgba(1e2030a3)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -126,29 +126,14 @@ decoration {
     # rounding = 10
     rounding = 0
 
-    active_opacity = 0.75
-    inactive_opacity = 0.75
+    active_opacity = 0.7
+    inactive_opacity = 0.7
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
-    #blur {
-    #    enabled = true
-    #    xray = true
-    #    special = true
-    #    new_optimizations = true
-    #    size = 7
-    #    passes = 5
-    #    brightness = 2
-    #    vibrancy_darkness = 0.7
-    #    noise = 0.01
-    #    contrast = 2
-    #    popups = true
-    #    popups_ignorealpha = 0.6
-    #    ignore_opacity = true
-    #}
     blur {
         enabled = true
-        size = 6
-        passes = 4
+        size = 3
+        passes = 5
         noise = 0.03
         contrast = 1.0
         brightness = 0.7
@@ -167,44 +152,52 @@ decoration {
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = yes
-    # Less pronounced bounce for window movements
-    bezier = subtleBounce, 0.14, 1.05, 0.25, 1.02
-    # More pronounced bounce with dramatic overshoot (for other elements)
-    bezier = dramaticBounce, 0.10, 1.3, 0.20, 1.15
-    # Elastic spring-like motion
-    bezier = elastic, 0.12, 1.2, 0.20, 0.95
-    # Sharp, snappy motion
-    bezier = snappy, 0.05, 0.9, 0.1, 1.05
-    # Smooth, flowing motion
-    bezier = fluid, 0.39, 0.0, 0.25, 1.0
-    # Playful, exaggerated bounce
-    bezier = playfulBounce, 0.2, 1.4, 0.15, 1.25
-    # Retain original beziers
-    bezier = smoothBounce, 0.16, 1.1, 0.3, 1.05
-    bezier = swiftEase, 0.22, 1.0, 0.36, 1.0
-    bezier = gentleLanding, 0.2, 0.8, 0.2, 1.0
-    bezier = elegantRise, 0.4, 0.0, 0.2, 1.0
-    bezier = springy, 0.12, 0.96, 0.1, 1.12
 
-    # Enhanced window animations with more subtle movement
-    animation = windows, 1, 6, snappy, slide
-    animation = windowsIn, 1, 5, elastic, popin 92%
-    animation = windowsOut, 1, 4, fluid, slidevert
-    animation = windowsMove, 1, 5, subtleBounce    # Using the new subtler bounce here
+    # Custom Bezier Curves
+    bezier = gentle, 0.33, 0.0, 0.67, 1.0
+    bezier = smoothOut, 0.36, 0.0, 0.66, -0.56
+    bezier = smoothIn, 0.25, 1.0, 0.5, 1.0
+    bezier = overshot, 0.05, 0.9, 0.1, 1.1
+    bezier = bounce, 0.1, 1.1, 0.2, 1.0
+    bezier = wind, 0.05, 0.7, 0.1, 1.05
+    bezier = fluid, 0.43, 0.0, 0.23, 1.0
+    bezier = breeze, 0.33, 1.0, 0.7, 1.0
 
-    # More varied fade animations
-    animation = fade, 1, 7, fluid
-    animation = fadeIn, 1, 4, elastic
-    animation = fadeOut, 1, 3, playfulBounce
-    animation = fadeDim, 1, 5, gentleLanding      # Using a gentler curve here
+    # Window Animations
+    animation = windows, 1, 6, fluid, slide
+    animation = windowsIn, 1, 3, smoothIn, slide
+    animation = windowsOut, 1, 5, smoothOut, slide
+    animation = windowsMove, 1, 5, wind
 
-    # More dynamic border animations
-    animation = border, 1, 10, elastic
-    animation = borderangle, 1, 40, playfulBounce, loop
+    # Fade Animations
+    animation = fade, 1, 8, gentle
+    animation = fadeIn, 1, 4, gentle
+    animation = fadeOut, 1, 3, gentle
+    animation = fadeSwitch, 1, 6, smoothOut
+    animation = fadeShadow, 1, 7, fluid
+    animation = fadeDim, 1, 5, smoothIn
 
-    # More pronounced workspace transitions
-    animation = workspaces, 1, 5, subtleBounce, slidefade 25%   # Also using subtler bounce
-    animation = specialWorkspace, 1, 6, elastic, slidefadevert 30%
+    # Border Animations
+    animation = border, 1, 8, breeze
+    animation = borderangle, 1, 40, fluid, loop
+
+    # Workspace Animations
+    animation = workspaces, 1, 7, wind, slidefade 15%
+    animation = workspacesIn, 1, 7, overshot, slidefade 20%
+    animation = workspacesOut, 1, 6, gentle, slidefade 20%
+
+    # Special Workspace Animations
+    animation = specialWorkspace, 1, 8, overshot, slidevert
+    animation = specialWorkspaceIn, 1, 8, wind
+    animation = specialWorkspaceOut, 1, 6, smoothOut
+
+    # Layer Animations
+    animation = layers, 1, 6, fluid, popin 97%
+    animation = layersIn, 1, 5, gentle, popin 95%
+    animation = layersOut, 1, 5, smoothOut, popin
+    animation = fadeLayers, 1, 5, smoothIn
+    animation = fadeLayersIn, 1, 5, smoothIn
+    animation = fadeLayersOut, 1, 4, smoothOut
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -273,7 +266,7 @@ binds {
     bindm = SUPER, mouse:273, resizewindow
 
     # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-    bind = SUPER, Q, exec, ghostty --title="ghostty"
+    bind = SUPER, Q, exec, $terminal --title="ghostty"
     bind = SUPER, T, exec, $terminal
     bind = SUPER, B, exec, $browser
     bind = SUPER, C, killactive,
@@ -324,10 +317,6 @@ binds {
     bind = SUPER SHIFT, 9, movetoworkspace, 9
     bind = SUPER SHIFT, 0, movetoworkspace, 10
 
-    # Example special workspace (scratchpad)
-    #bind = SUPER, S, togglespecialworkspace, magic
-    #bind = SUPER SHIFT, S, movetoworkspace, special:magic
-
     # Scroll through existing workspaces with mainMod + scroll
     bind = SUPER, mouse_down, workspace, e+1
     bind = SUPER, mouse_up, workspace, e-1
@@ -338,16 +327,6 @@ binds {
     bind = SUPER SHIFT, right, movewindow, r
     bind = SUPER SHIFT, up, movewindow, u
     bind = SUPER SHIFT, down, movewindow, d
-
-    #Make the windows tiling again
-    #bind = SUPER SHIFT, right, movewindow, r
-    #bind = SUPER SHIFT, right, resizeactive, exact 50% 100%
-    #bind = SUPER SHIFT, left, movewindow, l
-    #bind = SUPER SHIFT, left, resizeactive, exact 50% 100%
-    #bind = SUPER SHIFT, up, movewindow, u
-    #bind = SUPER SHIFT, up, resizeactive, exact 100% 50%
-    #bind = SUPER SHIFT, down, movewindow, d
-    #bind = SUPER SHIFT, down, resizeactive, exact 100% 50%
 
     bind = SUPER CTRL, left, splitratio, -0.1
     bind = SUPER CTRL, right, splitratio, 0.1
@@ -378,34 +357,22 @@ rules {
     windowrule = size 350 350, title:^(Save File)$
     windowrule = float, title:^(Select Folder to Scan — Filelight)$
 
-    windowrule = float, title:^(Bitwarden)$
+    windowrule = float, class:^(chrome-nngceckbapebfimnlniiiahkandclblb-Default)$ # Bitwarden
+
+    windowrule = float, initialClass:^(7zFM)$
 
     windowrule = noinitialfocus, class:jetbrains-idea, title:^win(.*)
-
     windowrule = float, title:^(OpenRGB)$
     windowrule = float, title:^(Qt6 Configuration Tool)$
     windowrule = float, title:^(Kvantum Manager)$
     windowrule = float, title:^(nwg-look)$
     windowrule = float, title:^(BleachBit)$
-
     windowrule = float, title:^(.*Hyprshot.*)$
-
     windowrule = float, title:^(ghostty)$
     windowrule = size 600 350, title:^(ghostty)$
     windowrule = move center, title:^(ghostty)$
     windowrule = animation popin, title:^(ghostty)$
 
-    # Ensure EWW is blurred properly
-    windowrule = opacity 0.8 0.8,class:^(eww-bar)$
-    windowrule = xray 1, class:^(eww-bar)$  # Enable xray mode for the window
-
-    #windowrule = opacity 0.8 0.8,class:^(fuzzel)$
-    #windowrule = xray 1, class:^(fuzzel)$  # Enable xray mode for the window
-
-    layerrule = blur, launcher
-    #layerrule = ignorezero, launcher
-    layerrule = blur, gtk-layer-shell
-    # Apply layer rules using EWW as an overlay
-    layerrule = blurpopups, gtk-layer-shell
-    layerrule = ignorezero, gtk-layer-shell
+    layerrule = blur, launcher                  # ghostty
+    layerrule = blurpopups, gtk-layer-shell     # eww
 }
