--- a/Configs/fastfetch/.config/fastfetch/config.jsonc
+++ b/Configs/fastfetch/.config/fastfetch/config.jsonc
@@ -1,21 +1,15 @@
-//   _____ _____ _____ _____ _____ _____ _____ _____ _____
-//  |   __|  _  |   __|_   _|   __|   __|_   _|     |  |  |
-//  |   __|     |__   | | | |   __|   __| | | |   --|     |
-//  |__|  |__|__|_____| |_| |__|  |_____| |_| |_____|__|__|  ARCH
-//
-//  by Bina
-
-// execute with: fastfetch --colors-block-range-start 9 --colors-block-width 3
-
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/fastfetch/arch.txt",
+    //"source": "~/.config/fastfetch/arch.txt",
+    "source": "~/.config/fastfetch/arch.png",
+    "height": 12,
     "padding": {
       "top": 1,
       "right": 6,
+      "left": 2,
     },
-    "color": { "1": "blue" },
+    //"color": { "1": "blue" },
   },
   "display": {
     "separator": " ",
@@ -73,5 +67,9 @@
       "keyColor": "34",
     },
     "break",
+    {
+      "type": "colors",
+      "symbol": "circle",
+    },
   ],
 }
