Add hyprshot-gui, enable vrr

--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 monitor = HDMI-A-1, 1920x1080@60, -1920x360, 1
-monitor = DP-1, 2560x1440@170, 0x0, 1, bitdepth, 10
+monitor = DP-1, 2560x1440@170, 0x0, 1, vrr, 1
 monitor = HDMI-A-2, 1920x1080@60, 2560x360, 1
 
 ###################
@@ -65,7 +65,7 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = WLR_NO_HARDWARE_CURSORS,1
 env = NVD_BACKEND,direct
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 env = ELECTRON_ENABLE_LOGGING,true
 
@@ -116,7 +116,7 @@ opengl {
 }
 
 misc {
-    vfr = 0
+    vrr = 1
 }
 
 # END TEST
@@ -333,8 +333,8 @@ binds {
     bind = SUPER CTRL, up, splitratio, -0.1
     bind = SUPER CTRL, down, splitratio, 0.1
 
-    bind = , PRINT, exec, hyprshot -m region
-    #bind = , PRINT, exec, hyprshot-gui
+    #bind = , PRINT, exec, hyprshot -m region
+    bind = , PRINT, exec, hyprshot-gui
 
     bind = Super, L, exec, hyprlock # launch lock screen
 
@@ -373,6 +373,9 @@ rules {
     windowrule = move center, title:^(ghostty)$
     windowrule = animation popin, title:^(ghostty)$
 
+    windowrule = float, title:^(.*Hyprshot.*)$  # hyprshot-gui
+
     layerrule = blur, launcher                  # ghostty
     layerrule = blurpopups, gtk-layer-shell     # eww
+    layerrule = blur, gtk-layer-shell     # eww
 }
