Use dunst as notification service, add experimental config

--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ $browser = chromium
 
 #exec-once = hyprpaper
 exec-once = swww-daemon
+exec-once = dunst
 
 # exec-once = walker --gapplication-service
 
