Revert to ascii logo

--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -72,6 +72,7 @@ env = ELECTRON_ENABLE_LOGGING,true
 
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
+#env = QT_QPA_PLATFORMTHEME,gtk3
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
