--- a/Configs/fastfetch/.config/fastfetch/config.jsonc
+++ b/Configs/fastfetch/.config/fastfetch/config.jsonc
@@ -1,15 +1,15 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    //"source": "~/.config/fastfetch/arch.txt",
-    "source": "~/.config/fastfetch/arch.png",
+    "source": "~/.config/fastfetch/arch.txt",
+    //"source": "~/.config/fastfetch/arch.png",
     "height": 12,
     "padding": {
       "top": 1,
       "right": 6,
       "left": 2,
     },
-    //"color": { "1": "blue" },
+    "color": { "1": "blue" },
   },
   "display": {
     "separator": " ",
