--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -41,7 +41,8 @@ $browser = chromium
 
 #exec-once = hyprpaper
 exec-once = swww-daemon
-exec-once = dunst
+exec-once = mako
+#exec-once = dunst
 
 # exec-once = walker --gapplication-service
 
@@ -69,6 +70,7 @@ env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 env = ELECTRON_ENABLE_LOGGING,true
+env = XDG_MENU_PREFIX=arch-
 
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
@@ -272,7 +274,7 @@ binds {
     bind = SUPER, T, exec, $terminal
     bind = SUPER, B, exec, $browser
     bind = SUPER, C, killactive,
-    bind = SUPER, M, exit,
+    bind = SUPER SHIFT, M, exit,
     bind = SUPER, E, exec, $fileManager
     bind = SUPER, F, fullscreen, 1
     # xhost si:localuser:root && sudo sudo; sudo gparted & sleep 1 && xhost -si:localuser:root
