Run kbuildsycoca6 once on hyprland start

--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -83,6 +83,8 @@ env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6
+
 #####################
 ### LOOK AND FEEL ###
 #####################
