Move all kde related stuff into a single folder, update explorer shortcut to use dolphin, add solution to the "Open With" issue

--- a/Configs/hypr/.config/hypr/hyprland.conf
+++ b/Configs/hypr/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor = HDMI-A-2, 1920x1080@60, 2560x360, 1
 
 # Set programs
 $terminal = ghostty --gtk-single-instance=true
-$fileManager = thunar
+$fileManager = dolphin
 $menu = fuzzel
 $browser = chromium
 
@@ -60,30 +60,35 @@ exec-once = ghostty --gtk-single-instance=true --quit-after-last-window-closed=f
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-#Nvidia Stuff
+# Hyprland
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# Nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
+
 env = GBM_BACKEND,nvidia-drm
 env = WLR_NO_HARDWARE_CURSORS,1
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 env = ELECTRON_ENABLE_LOGGING,true
+
+# Dolphin Open With Fix: https://github.com/prasanthrangan/hyprdots/issues/1406
 env = XDG_MENU_PREFIX=arch-
 
+# QT
 env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
-#env = QT_QPA_PLATFORMTHEME,gtk3
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 
-#Cursors
+# Cursors
 env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
-exec-once = XDG_MENU_PREFIX=arch- kbuildsycoca6
 
 #####################
 ### LOOK AND FEEL ###
